@@ -17,13 +17,19 @@ manprocessor := sed \
 # One font per fontset supported by d-i in text console
 udeb-fonts := CyrAsia-Fixed16 CyrSlav-TerminusBold16 Greek-VGA16 \
 Lat15-TerminusBold16 Lat2-TerminusBold16 Lat38-VGA16 Lat7-TerminusBold16
-# These are not properly supported by d-i in text console
-# Armenian-Fixed16 CyrKoi-TerminusBold16 Georgian-Fixed16 Hebrew-VGA16	Lao-Fixed16  Thai-Fixed16
-
 # These are Linux-only
-udeb-fonts-big := Uni1-VGA16 Uni2-VGA16 Uni3-Fixed16
-# These are not properly supported by d-i in text console
-# Arabic-VGA16 Ethiopian-Goha16 Vietnamese-Fixed16
+udeb-fonts-big := 
+
+# These are not properly supported by d-i in text console, but
+# included for completeness for speakup & brltty screen reading
+udeb-fonts += Armenian-Fixed16 Georgian-Fixed16 Hebrew-VGA16 Lao-Fixed16 Thai-Fixed16
+udeb-fonts-big += Arabic-VGA16 Ethiopian-Goha16 Vietnamese-Fixed16
+
+# This is not useful (KOI8-R encoding)
+# CyrKoi-TerminusBold16
+
+# These are not useful (convered by fonts above)
+# Uni1-VGA16 Uni2-VGA16 Uni3-Fixed16
 
 # One fontset per charmap
 udeb-scm := $(addprefix Fonts/, ARMSCII-8_Armenian.scm			\
@@ -37,7 +43,7 @@ ISO-8859-15_Lat15.scm ISO-8859-16_Lat2.scm KOI8-R_CyrKoi.scm		\
 KOI8-U_CyrKoi.scm TIS-620_Thai.scm)
 
 udeb-fonts-linux = $(addprefix Fonts/, $(addsuffix .psf.gz, \
-			$(udeb-fonts)))
+			$(udeb-fonts) $(udeb-fonts-big)))
 udeb-fonts-freebsd = $(addprefix Fonts/, $(addsuffix .fnt, $(udeb-fonts)))
 
 debian/kbdnames.gz: $./Keyboard/KeyboardNames.pl
